[package]
name = "mydyndns"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-appender = "0.1"
tracing-subscriber = "0.2"
openssl = { version = "0.10", features = ["vendored"] }